# auraone_v1

./: .gitignore  README.md  openrouter.py  pyproject.toml  quick_test_embeddings.py
auraone/people/recruit/candidates/resume_parsing/: parser.py  pdf_convert.py
