[project]
name = "auraone"
version = "0.1.0"
description = "Aura One"
authors = [
    { name = "Anderson de Sousa" }
]

maintainers = [
    { name = "Aura Governance LTDA" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "python-dotenv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
